Fixed height and vertical alignment issue on page header

--- a/src/MandevilleJoinery.Web/wwwroot/css/site.css
+++ b/src/MandevilleJoinery.Web/wwwroot/css/site.css
@@ -1,4 +1,13 @@
 ﻿/***************************** Master Tags *********************************/
+html {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    height: 100%;
+}
+
 h1, h2, h3, h4, h5 {
     font-family: "Roboto Slab";
     font-weight: 700;
@@ -85,7 +94,7 @@ nav.navbar {
 
 /* Raised Image **************************************/
 .mdv-img-raised {
-    min-height: 100%; 
+    /*min-height: 100%;*/ 
     width: auto;
     box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
     margin: 20px 0;
@@ -124,23 +133,27 @@ nav.navbar {
     background-size: cover;
     background-image: url('/images/bg3.jpg');
     min-height: 400px;
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    display: table;
 }
 
 .mdv-page-header::before {
     background-color: rgba(0, 0, 0, 0.2);
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     min-height: 400px;
     content: "";
 }
 
 .mdv-page-header .mdv-page-header-inner {
-    display: table-cell;
-    vertical-align: middle;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    position: absolute;
+    width: 100%;
 }
 
 .mdv-page-header .container {
